# motion-control

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
include/motion_control/: core.hpp
openspec/: config.yaml  project.md
openspec/changes/add-project-scaffolding/: design.md  proposal.md  tasks.md
openspec/changes/add-project-scaffolding/specs/build-system/: spec.md
openspec/changes/archive/2026-04-17-add-project-scaffolding/: tasks.md
openspec/changes/archive/2026-04-17-add-project-scaffolding/specs/build-system/: spec.md
openspec/changes/archive/2026-04-17-add-project-scaffolding/specs/ci-pipeline/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/ci-pipeline/: spec.md
src/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  smoke_test.cpp
